--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#website url to crawl
+page.url=${URL:https://www.goldrate24.com/gold-prices/}
+
 spring.application.name=JewelryProduction
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url=jdbc:sqlserver://Jewelry_Production_Order.mssql.somee.com;database=Jewelry_Production_Order;encrypt=true;trustServerCertificate=true
