--- a/Back-end/pom.xml
+++ b/Back-end/pom.xml
@@ -57,6 +57,11 @@
 			<version>33.2.0-jre</version>
 		</dependency>
 		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>java-dotenv</artifactId>
+			<version>5.2.2</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
