--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #website url to crawl
 page.url=${URL:https://www.goldrate24.com/gold-prices/}
+exchange.url=${URL:https://wise.com/vn/currency-converter/usd-to-vnd-rate}
 
 spring.application.name=JewelryProduction
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
