--- a/Back-end/src/main/resources/application-localdb.yml
+++ b/Back-end/src/main/resources/application-localdb.yml
@@ -2,10 +2,20 @@
 page:
     url: ${URL:https://www.goldrate24.com/gold-prices/}
 
+exchange:
+    url: ${URL:https://wise.com/vn/currency-converter/usd-to-vnd-rate}
+
 firebase:
     url: ${CONFIG_PATH}
 
+paypal:
+    client-id: ${PAYPAL_CLIENT_ID}
+    client-secret: ${PAYPAL_CLIENT_SECRET}
+    mode: ${PAYPAL_MODE}
+
 spring:
+    config:
+        import: optional:file:.env[.properties]
     application:
         name: JewelryProduction
     datasource:
