--- a/Back-end/src/main/resources/application.yml
+++ b/Back-end/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
         password: ${DB_PASSWORD}
     jpa:
         hibernate:
-            ddl-auto: create
+            ddl-auto: update
         properties:
             hibernate:
                 dialect: org.hibernate.dialect.SQLServerDialect
