--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 page.url=${URL:https://www.goldrate24.com/gold-prices/}
 exchange.url=${URL:https://wise.com/vn/currency-converter/usd-to-vnd-rate}
 
+
+server.port=8080
 spring.application.name=JewelryProduction
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url=jdbc:sqlserver://Jewelry_Production_Order.mssql.somee.com;database=Jewelry_Production_Order;encrypt=true;trustServerCertificate=true
