Configurate for deployment

--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -2,6 +2,9 @@
 page.url=${URL:https://www.goldrate24.com/gold-prices/}
 exchange.url=${URL:https://wise.com/vn/currency-converter/usd-to-vnd-rate}
 
+paypal.client-id=${PAYPAL_CLIENT_ID}
+paypal.client-secret:=${PAYPAL_CLIENT_SECRET}
+paypal.mode=${PAYPAL_MODE}
 
 server.port=8080
 spring.application.name=JewelryProduction
