--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -1,18 +1,20 @@
+spring.config.import=optional:file:.env[.properties]
+
 #website url to crawl
 page.url=${URL:https://www.goldrate24.com/gold-prices/}
 exchange.url=${URL:https://wise.com/vn/currency-converter/usd-to-vnd-rate}
 
 paypal.client-id=${PAYPAL_CLIENT_ID}
-paypal.client-secret:=${PAYPAL_CLIENT_SECRET}
+paypal.client-secret=${PAYPAL_CLIENT_SECRET}
 paypal.mode=${PAYPAL_MODE}
 
 server.port=8080
 spring.application.name=JewelryProduction
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://Jewelry_Production_Order.mssql.somee.com;database=Jewelry_Production_Order;encrypt=true;trustServerCertificate=true
-spring.datasource.username=DungNHSE180163_SQLLogin_1
-spring.datasource.password=dsjjdzqd77
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Ho_Chi_Minh
