--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -11,9 +11,9 @@ paypal.mode=${PAYPAL_MODE}
 server.port=8080
 spring.application.name=JewelryProduction
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=${WEB_DB_URL}
+spring.datasource.username=${WEB_DB_USERNAME}
+spring.datasource.password=${WEB_DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.show-sql=true
