--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.18.0",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "popper.js": "^1.16.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
