--- a/Back-end/src/main/resources/application-main.properties
+++ b/Back-end/src/main/resources/application-main.properties
@@ -18,3 +18,11 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=${DB_DIALECT}
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Ho_Chi_Minh
+
+#mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=datvtse180371@fpt.edu.vn
+spring.mail.password=orhgwkdiqahqunfy
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
