--- a/Back-end/src/main/resources/application-main.properties
+++ b/Back-end/src/main/resources/application-main.properties
@@ -22,7 +22,7 @@ spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Ho_Chi_Minh
 #mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=${SMTP_USERNAME}
+spring.mail.password=${SMTP_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
