--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.18.0",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.3",
     "jwt-decode": "^4.0.0",
     "popper.js": "^1.16.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
