--- a/Back-end/src/main/resources/application-main.properties
+++ b/Back-end/src/main/resources/application-main.properties
@@ -8,7 +8,7 @@ paypal.client-id=${PAYPAL_CLIENT_ID}
 paypal.client-secret=${PAYPAL_CLIENT_SECRET}
 paypal.mode=${PAYPAL_MODE}
 
-server.port=8080
+server.port=${PORT:8080}
 spring.application.name=JewelryProduction
 spring.datasource.driver-class-name=${DB_DRIVER}
 spring.datasource.url=${DB_URL}
