--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -48,5 +48,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5",
+    "webpack": "^5.92.0",
+    "webpack-cli": "^5.1.4"
   }
 }
