--- a/Back-end/src/main/resources/application-main.properties
+++ b/Back-end/src/main/resources/application-main.properties
@@ -1,4 +1,5 @@
 spring.config.import=optional:file:.env[.properties]
+base.url=${BASE_URL:localhost:8080}
 
 #website url to crawl
 page.url=${URL:https://www.goldrate24.com/gold-prices/}
@@ -14,7 +15,7 @@ spring.datasource.driver-class-name=${DB_DRIVER}
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=${HIBERNATE_DDL:create}
 spring.jpa.properties.hibernate.dialect=${DB_DIALECT}
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Ho_Chi_Minh
