--- a/Back-end/pom.xml
+++ b/Back-end/pom.xml
@@ -14,6 +14,8 @@
 	<name>JewelryProduction</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
+		<sonar.organization>okiyata</sonar.organization>
+ 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
@@ -186,6 +188,7 @@
 		</dependency>
 	</dependencies>
 
+	
 	<build>
 		<plugins>
 			<plugin>
